--- a/.github/workflows/myFLASK1.yml
+++ b/.github/workflows/myFLASK1.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
+      - name: Install dependencies on the ubuntu machine
         run: |
           python -m pip install --upgrade pip
           pip install flake8 
@@ -27,6 +27,6 @@ jobs:
         uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "ana680-3" #Must be unique in Heroku
+          heroku_app_name: "ana680-1" #Must be unique in Heroku
           heroku_email: "afarahan@nu.edu"
      
